MAJ 07/08/203 - Connection OK + menu en cours

--- a/src/main/webapp/CSS/styleConnectionCSS.css
+++ b/src/main/webapp/CSS/styleConnectionCSS.css
@@ -1,5 +1,5 @@
 html{
-    background-image: url('../CSS/Pictures/Connection2.png');
+    background-image: url('../CSS/PICTURES/molecule.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     height: 100%;
