MAJ 08/08/23 Gestion des sites

--- a/src/main/webapp/CSS/styleCommonCSS.css
+++ b/src/main/webapp/CSS/styleCommonCSS.css
@@ -31,7 +31,7 @@ body {
     padding: 0;
     font-size: 17px;
     font-family: var(--font-family);
-    background:  url(./PICTURES/Connection2.png);
+    background:  url(./PICTURES/images.jpg);
     background-size : cover;
 }
 
