--- a/src/main/webapp/VIEW/header.xhtml
+++ b/src/main/webapp/VIEW/header.xhtml
@@ -42,7 +42,7 @@
             <p:menubar>
                 <p:submenu label="#{I18N['menu.data.DM']}" icon="pi pi-fw pi-briefcase" rendered="#{connectionBean.verifyPermissionUser('DataManager')}">
                     <p:submenu label="#{I18N['menu.data.site']}" icon="pi pi-fw pi-building">
-                        <p:menuitem value="#{I18N['menu.data.site.add']}" icon="pi pi-fw pi-building pi-plus" action="/VIEW/AddSite.xhtml" rendered="#{connectionBean.verifyPermissionUser('Add a site')}"/>
+                        <p:menuitem value="#{I18N['menu.data.site.add']}" icon="pi pi-fw pi-plus pi-building" action="/VIEW/addSite.xhtml" rendered="#{connectionBean.verifyPermissionUser('Add a site')}"/>
                         <p:menuitem value="#{I18N['menu.data.site.consult']}" icon="pi pi-fw pi-building pi-pencil" action="/VIEW/listOfSites.xhtml" rendered="#{connectionBean.verifyPermissionUser('List of sites')}"/>
                     </p:submenu>
                     <p:divider/>
@@ -60,24 +60,7 @@
                         <p:menuitem value="#{I18N['menu.data.rolePermission.modify']}" icon="pi pi-fw pi-user pi-wrench pi-pencil" action="/VIEW/listOfrolePermission.xhtml" rendered="#{connectionBean.verifyPermissionUser('List of roles and related permissions')}"/>
                     </p:submenu>
                 </p:submenu>
-                <p:submenu label="#{I18N['menu.events']}" icon="pi pi-fw pi-calendar">
-                    <p:submenu label="#{I18N['menu.events']}" icon="pi pi-fw pi-calendar" rendered="#{connectionBean.verifyPermissionUser('Modifier un événement')}">
-                        <p:menuitem value="#{I18N['menu.data.events.add']}" icon="pi pi-fw pi-calendar-plus" action="/VIEW/addEvent.xhtml" rendered="#{connectionBean.verifyPermissionUser('Créer un événement')}"/>
-                        <p:menuitem value="#{I18N['menu.data.events.modify']}" icon="pi pi-fw pi-calendar" action="/VIEW/listOfEvents.xhtml" rendered="#{connectionBean.verifyPermissionUser('Modifier un événement')}"/>
-                    </p:submenu>
-                    <p:divider />
-                    <p:menuitem value="#{I18N['menu.data.events.participate']}" icon="pi pi-fw pi-calendar-plus" action="/VIEW/listOfMyPotentialEvent.xhtml" rendered="#{connectionBean.verifyPermissionUser('Ma participation aux événements')}"/>
-                    <p:menuitem value="#{I18N['menu.data.events.myParticipation']}" icon="pi pi-fw pi-calendar" action="/VIEW/myPlanning.xhtml" rendered="#{connectionBean.verifyPermissionUser('Mon planning')}"/>
-                    <p:menuitem value="#{I18N['event.countUser']}" icon="pi pi-fw pi-calendar" action="/VIEW/listOfUserEvents.xhtml" rendered="#{connectionBean.verifyPermissionUser('Consulter la liste des participants par évènement')}"/>
-                </p:submenu>
-                <p:submenu label="#{I18N['menu.chasa']}" icon="pi pi-fw pi-wrench" rendered="#{connectionBean.verifyPermissionUser('Ajouter un rôle')}">
-                    <p:submenu label="#{I18N['menu.chasa']}" icon="pi pi-fw pi-wrench">
-                        <p:menuitem value="#{I18N['menu.chasa.role.add']}" icon="pi pi-fw pi-user-plus" action="/VIEW/addRole.xhtml" rendered="#{connectionBean.verifyPermissionUser('Ajouter un rôle')}"/>
-                        <p:menuitem value="#{I18N['menu.chasa.role.consult']}" icon="pi pi-fw pi-users" action="/VIEW/listOfRoles.xhtml" rendered="#{connectionBean.verifyPermissionUser('Afficher la liste des rôles')}"/>
-                        <p:menuitem value="#{I18N['menu.chasa.rolePermission.add']}" icon="pi pi-fw pi-user-plus" action="/VIEW/addRolePermissions.xhtml" rendered="#{connectionBean.verifyPermissionUser('Ajouter une liste de permission pour un rôle')}"/>
-                        <p:menuitem value="#{I18N['menu.chasa.rolePermission.modify']}" icon="pi pi-fw pi-wrench" action="/VIEW/listOfrolePermission.xhtml" rendered="#{connectionBean.verifyPermissionUser('Liste des permissions pour un rôle')}"/>
-                    </p:submenu>
-                </p:submenu>
+
 
                 <f:facet name="options">
                     <p:commandButton value="Logout"  action="#{connectionBean.logOut}" icon="pi pi-fw pi-sign-out" styleClass="ui-button-info"/>
