--- a/src/main/webapp/VIEW/listOfRoles.xhtml
+++ b/src/main/webapp/VIEW/listOfRoles.xhtml
@@ -9,19 +9,19 @@
       xmlns:p="http://primefaces.org/ui">
 <ui:composition template="/WEB-INF/TEMPLATES/OverallTemplate.xhtml">
     <ui:define name="title">
-        <h:outputText value="#{I18N['sitePage.ListOfSites']}"/>
+        <h:outputText value="#{I18N['rolePage.ListOfRoles']}"/>
     </ui:define>
     <ui:define name="content">
         <div class="content card">
             <div class="block p-20 form-container">
                 <h2>
-                    <h:outputText value="#{I18N['sitePage.ListOfSites']}" />
+                    <h:outputText value="#{I18N['rolePage.ListOfRoles']}" />
                 </h2>
                 <h:form>
                     <f:metadata>
-                        <f:event type="preRenderView" listener="#{siteBean.ResearchFilterSite()}"/>
+                        <f:event type="preRenderView" listener="#{roleBean.ResearchFilterRole()}"/>
                     </f:metadata>
-                    <p:dataTable var="r" value="#{siteBean.entityFiltered}"
+                    <p:dataTable var="r" value="#{roleBean.entityFiltered}"
                                  resizableColumns="true"
                                  class="table"
                                  widgetVar="rTable"
@@ -34,7 +34,7 @@
 
                         <f:facet name="header">
                             <p:outputPanel>
-                                <p:inputText value="#{siteBean.filter}"
+                                <p:inputText value="#{roleBean.filter}"
                                              onkeyup="researchTable(this)"
                                              id="RolesInputResearch"
                                              validatorMessage="#{I18N['listPage.messageErrorResearch']}"
@@ -43,27 +43,19 @@
                             </p:outputPanel>
                         </f:facet>
                         <p:column>
-                            <f:facet name="header">#{I18N['sitePage.siteNum']}</f:facet>
-                            <h:outputText value="#{r.siteNum}"></h:outputText>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">#{I18N['sitePage.siteName']}</f:facet>
-                            <h:outputText value="#{r.siteName}"></h:outputText>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">#{I18N['sitePage.piName']}</f:facet>
-                            <h:outputText value="#{r.piName}"></h:outputText>
+                            <f:facet name="header">#{I18N['rolePage.roleLabel']}</f:facet>
+                            <h:outputText value="#{r.roleLabel}"></h:outputText>
                         </p:column>
                         <p:column>
                             <f:facet name="header">#{I18N['action']}</f:facet>
-                            <h:commandLink class="btn btn-dark" value="#{I18N['sitePage.ListOfSites.modify']}" action="/VIEW/updateSite">
-                                <f:setPropertyActionListener target="#{siteBean.site}" value="#{r}"/>
+                            <h:commandLink class="btn btn-dark" value="#{I18N['rolePage.role.modify']}" action="/VIEW/updateRole">
+                                <f:setPropertyActionListener target="#{roleBean.role}" value="#{r}"/>
                             </h:commandLink>
                         </p:column>
                     </p:dataTable>
                 </h:form>
                 <h:form>
-                    <p:linkButton outcome="/VIEW/addSite.xhtml" value="#{I18N['sitePage.addSiteTitle']}" icon="pi pi-fw pi-user-plus" style="margin-right:20px;"></p:linkButton>
+                    <p:linkButton outcome="/VIEW/addRole.xhtml" value="#{I18N['rolepage.addRoletitle']}" icon="pi pi-fw pi-user-plus" style="margin-right:20px;"></p:linkButton>
                 </h:form>
             </div>
         </div>
