--- a/src/main/webapp/VIEW/listOfSites.xhtml
+++ b/src/main/webapp/VIEW/listOfSites.xhtml
@@ -19,7 +19,7 @@
                 </h2>
                 <h:form>
                     <f:metadata>
-                        <f:event type="preRenderView" listener="#{siteBean.ResearchFilterSite()}"/>
+                        <f:event type="preRenderView" listener="#{siteBean.researchFilterSite()}"/>
                     </f:metadata>
                     <p:dataTable var="r" value="#{siteBean.entityFiltered}"
                                  resizableColumns="true"
