--- a/src/main/webapp/VIEW/addDov.xhtml
+++ b/src/main/webapp/VIEW/addDov.xhtml
@@ -60,6 +60,12 @@
                                         value="#{I18N['messageErrorVisitDate']}"/></span>
                             </div>
                         </div>
+                        <div class="ui-message ui-message-error ui-widget ui-corner-all #{dovBean.messageErrorVisitDateMissing}">
+                            <div><span class="ui-message-error-icon"> </span>
+                                <span class="ui-message-error-detail"><h:outputText
+                                        value="#{I18N['messageErrorVisitDateMissing']}"/></span>
+                            </div>
+                        </div>
                     </p:outputPanel>
                     <span class="responsiveSubmit">
                         <p:commandButton value="#{I18N['application.create.dov']}"
@@ -68,7 +74,11 @@
                                          class="ui-button-success"
                                          action="#{dovBean.submitFormAddDov}"/>
 
-                        <p:linkButton outcome="/VIEW/home.xhtml" value="#{I18N['connectionpage.return.button']}" class="ui-button-secondary" ></p:linkButton>
+                        <p:commandButton value="#{I18N['connectionpage.return.button']}"
+                                         ajax="false"
+                                         validateClient="true"
+                                         class="ui-button-secondary"
+                                         action="#{eventBean.deleteEvent()}"/>
                     </span>
                 </h:form>
             </div>
