MAJ 23/08 VS en cours

--- a/src/main/webapp/VIEW/addEvent.xhtml
+++ b/src/main/webapp/VIEW/addEvent.xhtml
@@ -23,7 +23,7 @@
                 <h:form>
                     <p:outputPanel class="form-control">
                         <span class="field col-12 md:col-4 p-20-0">
-                            <p:outputLabel for="inputSubject" value="#{I18N['sitePage.siteNum']}"/>
+                            <p:outputLabel for="inputSubject" value="#{I18N['select.user']}"/>
                             <p:selectOneMenu id="inputSubject"
                                              value="#{eventBean.event.subjectByIdSubject}"
                                              converter="SubjectConverter"
